fix: style scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar {
-  width: 10px;
+  width: 9px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
@@ -34,12 +34,12 @@
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #999;
   border-radius: 10px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #777;
 }
 
 :root {
